--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
           <img src="junhyuk.jpeg" class="rounded-circle w-75">
           <div class="pt-1 pb-3">
             <h3>Jun-Hyuk Kim</h3>
-            <h4 class="lead font-weight-normal">Ph.D. student</h4>
+            <h4 class="lead font-weight-normal">Ph.D. candidate</h4>
             <h4 class="lead font-weight-light">junhyuk.kim@yonsei.ac.kr</h4>
           </div>
         </div>
         <div class="col-md-8">
           <p class="lead font-weight-normal">
-            I am a PhD student at the <a href="http://mcml.yonsei.ac.kr/" target="_blank">Multimedia Computing and Machine Learning (MCML) Group</a> of <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a> under the supervision of Prof. Jong-Seok Lee. I received the B.S. degree in the <a href="http://sit.yonsei.ac.kr/" target="_blank">School of Integrated Technology</a> from Yonsei University, South Korea, in 2015. My research interests include low-level computer vision and deep learning.<br /><br />
+            I am a PhD candidate at the <a href="http://mcml.yonsei.ac.kr/" target="_blank">Multimedia Computing and Machine Learning (MCML) Group</a> of <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a> under the supervision of Prof. Jong-Seok Lee. I received the B.S. degree in the <a href="http://sit.yonsei.ac.kr/" target="_blank">School of Integrated Technology</a> from Yonsei University, South Korea, in 2015. I am interested in making visual data more valuable in various aspects based on deep learning. In particular, I have focused on developing learned image restoration and compression models for better visual quality and less capacity, respectively.<br /><br />
             <strong>Experiences</strong>
-            <li>Research Intern at <a href="https://naver-career.gitbook.io/en/teams/clova-cic" target="_blank">NAVER AI Lab</a> (Jun. 2021 - Nov. 2021)</li>
+            <li>Research intern at <a href="https://naver-career.gitbook.io/en/teams/clova-cic" target="_blank">NAVER AI Lab</a> (Jun. 2021 - Nov. 2021)</li>
           </p>    
         </div>
       </div>
@@ -85,7 +85,7 @@
         <p class="publication-item">
           <span class="lead">Successive learned image compression: Comprehensive analysis of instability</span><br />
           <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
-          <em>Neurocomputing</em>, accepted<br />
+          <em>Neurocomputing</em>, vol. 506, pp. 12-24, Sep. 2022<br />
           <a href="https://doi.org/10.1016/j.neucom.2022.07.065" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> 
         </p>
         <p class="publication-item">
@@ -122,6 +122,7 @@
           <span class="lead">Deep image destruction: Vulnerability of deep image-to-image models against adversarial attacks</span><br />
           J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
           <em>International Conference on Pattern Recognition (ICPR)</em>, Aug. 2022<br />
+          <a href="https://arxiv.org/abs/2104.15022" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">Joint global and local hierarchical priors for learned image compression</span><br />
@@ -141,6 +142,7 @@
           <span class="lead">Edge attention network for image deblurring and super-resolution</span><br />
           J.-W. Han, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
           <em>IEEE International Conference on Systems, Man, and Cybernetics (SMC)</em>, pp. 2393-2398, Oct. 2021<br />
+          <a href="https://doi.org/10.1109/SMC52423.2021.9658863" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">NTIRE 2021 challenge on image deblurring</span><br />
