--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
           <img src="junhyuk.jpeg" class="rounded-circle w-75">
           <div class="pt-1 pb-3">
             <h3>Jun-Hyuk Kim</h3>
-            <h4 class="lead font-weight-normal">Ph.D. candidate</h4>
-            <h4 class="lead font-weight-light">junhyuk.kim@yonsei.ac.kr</h4>
+            <h4 class="lead font-weight-normal">Research Scientist</h4>
+            <h4 class="lead font-weight-light"><small>jh131.kim@samsung.com</small></h4>
           </div>
         </div>
         <div class="col-md-8">
           <p class="lead font-weight-normal">
-            I am a PhD candidate at the <a href="http://mcml.yonsei.ac.kr/" target="_blank">Multimedia Computing and Machine Learning (MCML) Group</a> of <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a> under the supervision of Prof. Jong-Seok Lee. I received the B.S. degree in the <a href="http://sit.yonsei.ac.kr/" target="_blank">School of Integrated Technology</a> from Yonsei University, South Korea, in 2015. I am interested in making visual data more valuable in various aspects based on deep learning. In particular, I have focused on developing learned image restoration and compression models for better visual quality and less capacity, respectively.<br /><br />
+            I am a research scientist at <a href="https://www.sait.samsung.co.kr/saithome/main/main.do" target="_blank">Samsung Advanced Institute of Technology (SAIT)</a>. I received my Ph.D. degree from <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a>, South Korea, in 2022, under the supervision of <a href="https://mcml.yonsei.ac.kr/professor" target="_blank">Prof. Jong-Seok Lee</a>. I am interested in making visual data more valuable in various aspects based on deep learning. In particular, I have focused on developing learned image restoration and compression models for better visual quality and less capacity, respectively.<br /><br />
             <strong>Experiences</strong>
+            <li>Research scientist at <a href="https://www.sait.samsung.co.kr/saithome/main/main.do" target="_blank">SAIT</a> (Oct. 2022 - Now)</li>
             <li>Research intern at <a href="https://naver-career.gitbook.io/en/teams/clova-cic" target="_blank">NAVER AI Lab</a> (Jun. 2021 - Nov. 2021)</li>
           </p>    
         </div>
@@ -259,7 +260,7 @@
         <p class="award-item">
           <span class="lead">Merit Academic Paper Award</span><br />
           <em>2020-2 Yonsei Superior Paper Awards</em>, Dec. 2020<br />
-          <small>Korean: 2020년 2학기 연세대학교 대학원생 우수논문 장려상</small>
+          <!-- <small>Korean: 2020년 2학기 연세대학교 대학원생 우수논문 장려상</small> -->
         </p>   
         <p class="award-item">
           <span class="lead">2nd Place (Region 1)</span><br />
