--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="pt-1 pb-3">
             <h3>Jun-Hyuk Kim</h3>
             <h4 class="lead font-weight-normal">Research Scientist</h4>
-            <h4 class="lead font-weight-light"><small>jh131.kim@samsung.com</small></h4>
+            <h4 class="lead font-weight-light"><small>junhyuk.kim@yonsei.ac.kr</small></h4>
           </div>
         </div>
         <div class="col-md-8">
@@ -119,6 +119,12 @@
       <!-- Sub-section: conferences -->   
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
+        <p class="publication-item">
+          <span class="lead">Demystifying randomly initialized networks for evaluating generative models</span><br />
+          J. Lee, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
+          <em>AAAI Conference on Artificial Intelligience (AAAI)</em>, Feb. 2023<br />
+          <a href="https://arxiv.org/abs/2208.09218" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
+        </p>
         <p class="publication-item">
           <span class="lead">Deep image destruction: Vulnerability of deep image-to-image models against adversarial attacks</span><br />
           J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
