Add the News section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,49 @@
       <hr width="100%" align="left" color="#EAECEE">
     </section>
 
+    <!-- Section: News -->
+    <section class="container section" id="news">
+      <h2><i class="fas fa-bullhorn"></i> News</h2>
+      <section class="sub-section">   
+      <table>
+        <tbody>
+          <tr>
+            <td class="news-header">Nov. 2022</td>
+            <td>1 paper accepted in AAAI 2023</td>
+          </tr>
+          <tr>
+            <td class="news-header">Jul. 2022</td>
+            <td>1 paper accepted in Neurocomputing</td>
+          </tr>
+          <tr>
+            <td class="news-header">Mar. 2022</td>
+            <td>1 paper accepted in CVPR 2022</td>
+          </tr>
+          <tr>
+            <td class="news-header">Jul. 2021</td>
+            <td>1 paper accepted in ICCV 2021</td>
+          </tr>
+          <tr>
+            <td class="news-header">Sep. 2020</td>
+            <td>1 paper accepted in ACCV 2020</td>
+          </tr>
+          <tr>
+            <td class="news-header">Jul. 2020</td>
+            <td>1 paper accepted in ACM MM 2020 (oral presentation)</td>
+          </tr>
+          <tr>
+            <td class="news-header">Mar. 2020</td>
+            <td>1 paper accepted in Neurocomputing</td>
+          </tr>
+          <tr>
+            <td class="news-header">Jan. 2020</td>
+            <td>2 papers accepted in ICASSP 2020 (1 oral presentation)</td>
+          </tr>
+        </tbody>
+      </table>
+      </section>
+    </section>
+
     <!-- Section: publications -->
     <section class="container section" id="publications">
       <h2><i class="fas fa-newspaper"></i> Publications</h2>
