--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="container section" id="news">
       <h2><i class="fas fa-bullhorn"></i> News</h2>
       <section class="sub-section">   
-      <table>
+      <table class="table-condensed">
         <tbody>
           <tr>
             <td class="news-header">Nov. 2022</td>
