--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <tbody>
           <tr>
             <td class="news-header">Nov. 2022</td>
-            <td>1 paper accepted in AAAI 2023</td>
+            <td>1 paper accepted in AAAI'23</td>
           </tr>
           <tr>
             <td class="news-header">Jul. 2022</td>
@@ -81,19 +81,19 @@
           </tr>
           <tr>
             <td class="news-header">Mar. 2022</td>
-            <td>1 paper accepted in CVPR 2022</td>
+            <td>1 paper accepted in CVPR'22</td>
           </tr>
           <tr>
             <td class="news-header">Jul. 2021</td>
-            <td>1 paper accepted in ICCV 2021</td>
+            <td>1 paper accepted in ICCV'21</td>
           </tr>
           <tr>
             <td class="news-header">Sep. 2020</td>
-            <td>1 paper accepted in ACCV 2020</td>
+            <td>1 paper accepted in ACCV'20</td>
           </tr>
           <tr>
             <td class="news-header">Jul. 2020</td>
-            <td>1 paper accepted in ACM MM 2020 (oral presentation)</td>
+            <td>1 paper accepted in MM'20 (oral presentation)</td>
           </tr>
           <tr>
             <td class="news-header">Mar. 2020</td>
@@ -101,7 +101,7 @@
           </tr>
           <tr>
             <td class="news-header">Jan. 2020</td>
-            <td>2 papers accepted in ICASSP 2020 (1 oral presentation)</td>
+            <td>2 papers accepted in ICASSP'20 (1 oral presentation)</td>
           </tr>
         </tbody>
       </table>
