--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <tbody>
           <tr>
             <td class="news-header">Nov. 2022</td>
-            <td>1 paper accepted in AAAI'23</td>
+            <td>1 paper accepted in AAAI'23 (oral presentation)</td>
           </tr>
           <tr>
             <td class="news-header">Jul. 2022</td>
