--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       <table class="table-condensed">
         <tbody>
           <tr>
+            <td class="news-header">May 2024</td>
+            <td>1 paper accepted in ICML'24</td>
+          </tr>
+          <tr>
             <td class="news-header">Nov. 2022</td>
             <td>1 paper accepted in AAAI'23 (oral presentation)</td>
           </tr>
@@ -87,7 +91,7 @@
             <td class="news-header">Jul. 2021</td>
             <td>1 paper accepted in ICCV'21</td>
           </tr>
-          <tr>
+          <!-- <tr>
             <td class="news-header">Sep. 2020</td>
             <td>1 paper accepted in ACCV'20</td>
           </tr>
@@ -102,7 +106,7 @@
           <tr>
             <td class="news-header">Jan. 2020</td>
             <td>2 papers accepted in ICASSP'20 (1 oral presentation)</td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
       </section>
@@ -123,45 +127,16 @@
         </p>
       </section> -->
 
-      <!-- Sub-section: journals -->
-      <section class="sub-section">      
-        <h3><li><span>Journals</span></li></h3>
-        <p class="publication-item">
-          <span class="lead">Successive learned image compression: Comprehensive analysis of instability</span><br />
-          <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
-          <em>Neurocomputing</em>, vol. 506, pp. 12-24, Sep. 2022<br />
-          <a href="https://doi.org/10.1016/j.neucom.2022.07.065" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> 
-        </p>
-        <p class="publication-item">
-          <span class="lead">Volatile-nonvolatile memory network for progressive image super-resolution</span><br />
-          J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
-          <em>IEEE Access</em>, vol. 9, pp. 37487-37496, Mar. 2021<br />
-          <a href="https://doi.org/10.1109/ACCESS.2021.3063760" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://github.com/idearibosome/tf-vmnet" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        </p>
-        <p class="publication-item">
-          <span class="lead">Prediction of car design perception using EEG and gaze patterns</span><br />
-          S.-E. Moon, <strong>J.-H. Kim</strong>, S.-W. Kim, J.-S. Lee<br />
-          <em>IEEE Transactions on Affective Computing</em>, vol. 12, no. 4, pp. 843-856, 2021<br />
-          <a href="https://doi.org/10.1109/TAFFC.2019.2901733" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
-        </p>  
-        <p class="publication-item">
-          <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
-          <strong>J.-H. Kim</strong>, J.-H. Choi, M. Cheon, J.-S. Lee<br />
-          <em>Neurocomputing</em>, vol. 402, pp. 38-49, Aug. 2020<br />
-          <a href="https://doi.org/10.1016/j.neucom.2020.03.069" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://arxiv.org/abs/1811.12043" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/junhyukk/MAMNet-tensorflow" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        </p>
-        <p class="publication-item">
-          <span class="lead">Deep learning-based image super-resolution considering quantitative and perceptual quality</span><br />
-          J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
-          <em>Neurocomputing</em>, vol. 398, pp. 347-359, Jul. 2020<br />
-          <a href="https://doi.org/10.1016/j.neucom.2019.06.103" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / 
-          <a href="https://arxiv.org/abs/1809.04789" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-perceptual-eusr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        </p>    
-      </section>
-
+      
       <!-- Sub-section: conferences -->   
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
+        <p class="publication-item">
+          <span class="lead">Neural image compression with text-guided encoding for both pixel-level and perceptual fidelity</span><br />
+          H. Lee, M. Kim, <strong>J.-H. Kim</strong>, S. Kim, D. Oh, J.-S. Lee<br />
+          <em>International Conference on Machine Learning (ICML)</em>, Jul. 2024<br />
+          <a href="https://arxiv.org/abs/2403.02944" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
+        </p>
         <p class="publication-item">
           <span class="lead">Demystifying randomly initialized networks for evaluating generative models</span><br />
           J. Lee, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
@@ -299,6 +274,42 @@
           <em>APSIPA Annual Summit and Conference</em>, Dec. 2016<br />
           <a href="https://doi.org/10.1109/APSIPA.2016.7820889" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
+      </section>
+
+      <!-- Sub-section: journals -->
+      <section class="sub-section">      
+        <h3><li><span>Journals</span></li></h3>
+        <p class="publication-item">
+          <span class="lead">Successive learned image compression: Comprehensive analysis of instability</span><br />
+          <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
+          <em>Neurocomputing</em>, vol. 506, pp. 12-24, Sep. 2022<br />
+          <a href="https://doi.org/10.1016/j.neucom.2022.07.065" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> 
+        </p>
+        <p class="publication-item">
+          <span class="lead">Volatile-nonvolatile memory network for progressive image super-resolution</span><br />
+          J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
+          <em>IEEE Access</em>, vol. 9, pp. 37487-37496, Mar. 2021<br />
+          <a href="https://doi.org/10.1109/ACCESS.2021.3063760" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://github.com/idearibosome/tf-vmnet" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        </p>
+        <p class="publication-item">
+          <span class="lead">Prediction of car design perception using EEG and gaze patterns</span><br />
+          S.-E. Moon, <strong>J.-H. Kim</strong>, S.-W. Kim, J.-S. Lee<br />
+          <em>IEEE Transactions on Affective Computing</em>, vol. 12, no. 4, pp. 843-856, 2021<br />
+          <a href="https://doi.org/10.1109/TAFFC.2019.2901733" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+        </p>  
+        <p class="publication-item">
+          <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
+          <strong>J.-H. Kim</strong>, J.-H. Choi, M. Cheon, J.-S. Lee<br />
+          <em>Neurocomputing</em>, vol. 402, pp. 38-49, Aug. 2020<br />
+          <a href="https://doi.org/10.1016/j.neucom.2020.03.069" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://arxiv.org/abs/1811.12043" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/junhyukk/MAMNet-tensorflow" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        </p>
+        <p class="publication-item">
+          <span class="lead">Deep learning-based image super-resolution considering quantitative and perceptual quality</span><br />
+          J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
+          <em>Neurocomputing</em>, vol. 398, pp. 347-359, Jul. 2020<br />
+          <a href="https://doi.org/10.1016/j.neucom.2019.06.103" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / 
+          <a href="https://arxiv.org/abs/1809.04789" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-perceptual-eusr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        </p>    
       </section>
     </section>
 
