--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
           <span class="lead">Neural image compression with text-guided encoding for both pixel-level and perceptual fidelity</span><br />
-          H. Lee, M. Kim, <strong>J.-H. Kim</strong>, S. Kim, D. Oh, J.-S. Lee<br />
+          H. Lee, M. Kim, <strong>J.-H. Kim</strong>, S. Kim, D. Oh, J. Lee<br />
           <em>International Conference on Machine Learning (ICML)</em>, Jul. 2024<br />
           <a href="https://arxiv.org/abs/2403.02944" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
