--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       <table class="table-condensed">
         <tbody>
           <tr>
+            <td class="news-header">Sep. 2024</td>
+            <td>1 paper accepted in NeurIPS'24</td>
+          </tr>
+          <tr>
             <td class="news-header">May 2024</td>
             <td>1 paper accepted in ICML'24</td>
           </tr>
@@ -131,6 +135,11 @@
       <!-- Sub-section: conferences -->   
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
+        <p class="publication-item">
+          <span class="lead">Diversify, contextualize, and adapt: Efficient entropy modeling for neural image codec</span><br />
+          <strong>J.-H. Kim</strong>, S. Kim, W.-H. Lee, D. Oh<br />
+          <em>Advances in Neural Information Processing Systems (NeurIPS)</em>, Dec. 2024<br />
+        </p>
         <p class="publication-item">
           <span class="lead">Neural image compression with text-guided encoding for both pixel-level and perceptual fidelity</span><br />
           H. Lee, M. Kim, <strong>J.-H. Kim</strong>, S. Kim, D. Oh, J. Lee<br />
