--- a/index.html
+++ b/index.html
@@ -139,11 +139,14 @@
           <span class="lead">Diversify, contextualize, and adapt: Efficient entropy modeling for neural image codec</span><br />
           <strong>J.-H. Kim</strong>, S. Kim, W.-H. Lee, D. Oh<br />
           <em>Advances in Neural Information Processing Systems (NeurIPS)</em>, Dec. 2024<br />
+          <a href="https://arxiv.org/abs/2411.05832" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">Neural image compression with text-guided encoding for both pixel-level and perceptual fidelity</span><br />
           H. Lee, M. Kim, <strong>J.-H. Kim</strong>, S. Kim, D. Oh, J. Lee<br />
           <em>International Conference on Machine Learning (ICML)</em>, Jul. 2024<br />
+          <a href="https://proceedings.mlr.press/v235/lee24n.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> /
+
           <a href="https://arxiv.org/abs/2403.02944" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
