--- a/index.html
+++ b/index.html
@@ -46,19 +46,24 @@
     <section class="container section" id="home">
       <div class="row align-items-center">
         <div class="col-md-4 text-center">
+          <!-- <img src="junhyuk.jpeg" class="rounded-circle w-75"> -->
           <img src="junhyuk.jpeg" class="rounded-circle w-75">
           <div class="pt-1 pb-3">
             <h3>Jun-Hyuk Kim</h3>
-            <h4 class="lead font-weight-normal">Research Scientist</h4>
-            <h4 class="lead font-weight-light"><small>junhyuk.kim@yonsei.ac.kr</small></h4>
+            <h4 class="lead font-weight-normal">Assistant Professor</h4>
+            <h4 class="lead font-weight-light"><small>junhyukkim [at] cau.ac.kr</small></h4>
           </div>
         </div>
         <div class="col-md-8">
           <p class="lead font-weight-normal">
-            I am a research scientist at <a href="https://www.sait.samsung.co.kr/saithome/main/main.do" target="_blank">Samsung Advanced Institute of Technology (SAIT)</a>. I received my Ph.D. degree from <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a>, South Korea, in 2022, under the supervision of <a href="https://mcml.yonsei.ac.kr/professor" target="_blank">Prof. Jong-Seok Lee</a>. I am interested in making visual data more valuable in various aspects based on deep learning. In particular, I have focused on developing learned image restoration and compression models for better visual quality and less capacity, respectively.<br /><br />
+            I am an Assistant Professor in the Department of Artificial Intelligence (AI) at <a href="https://neweng.cau.ac.kr/index.do" target="_blank">Chung-Ang University (CAU)</a>, South Korea. I am interested in making visual data more valuable in various aspects based on AI. In particular, I have focused on developing learned image compression and restoration models to reduce storage requirements and improve visual quality, respectively.<br /><br />
+
+            Previously, I was a Staff Engineer at <a href="https://www.sait.samsung.co.kr/saithome/main/main.do" target="_blank">Samsung Advanced Institute of Technology (SAIT)</a>. Before that, I received my Ph.D. from <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a>, South Korea, in 2022, under the supervision of <a href="https://mcml.yonsei.ac.kr/professor" target="_blank">Prof. Jong-Seok Lee</a>.<br /><br />
+
             <strong>Experiences</strong>
-            <li>Research scientist at <a href="https://www.sait.samsung.co.kr/saithome/main/main.do" target="_blank">SAIT</a> (Oct. 2022 - Now)</li>
-            <li>Research intern at <a href="https://naver-career.gitbook.io/en/teams/clova-cic" target="_blank">NAVER AI Lab</a> (Jun. 2021 - Nov. 2021)</li>
+            <li>Assistant Professor at <a href="https://neweng.cau.ac.kr/index.do" target="_blank">CAU</a> (Mar. 2025 - Now)</li>
+            <li>Staff Engineer at <a href="https://www.sait.samsung.co.kr/saithome/main/main.do" target="_blank">SAIT</a> (Oct. 2022 - Feb. 2025)</li>
+            <li>Research Intern at <a href="https://naver-career.gitbook.io/en/teams/clova-cic" target="_blank">NAVER AI Lab</a> (Jun. 2021 - Nov. 2021)</li>
           </p>    
         </div>
       </div>
